Proxy file changes don't update until Blender's restart #38806

Closed
opened 2014-02-24 13:07:32 +01:00 by Paulo José Oliveira Amaro · 6 comments

Blender Version
v2.69.11 f1a0278

Short description of error
In Sequencer, if you set a Proxy Custom File to a movie strip and then want to change it (maybe because you've selected the wrong file), the proxy will not be updated until reopen file or restart Blender. Reset proxy checkboxes or "Refresh Sequencer" don't help.

Steps to reproduce the error

  1. Add a movie/image strip to sequencer
  2. Enable Proxy, Proxy Custom File and select a movie/image to use as Proxy.
  3. Change Proxy display settings to check if the Proxy loaded properly.
  4. Now choose another file to use as Proxy.
  5. Proxy will not update until reopen file or restart Blender.
**Blender Version** v2.69.11 f1a0278 **Short description of error** In Sequencer, if you set a Proxy Custom File to a movie strip and then want to change it (maybe because you've selected the wrong file), the proxy will not be updated until reopen file or restart Blender. Reset proxy checkboxes or "Refresh Sequencer" don't help. **Steps to reproduce the error** 1. Add a movie/image strip to sequencer 2. Enable Proxy, Proxy Custom File and select a movie/image to use as Proxy. 3. Change Proxy display settings to check if the Proxy loaded properly. 4. Now choose another file to use as Proxy. 5. Proxy will not update until reopen file or restart Blender.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @PauloJoseOliveiraAmaro

Added subscriber: @PauloJoseOliveiraAmaro
Sergey Sharybin self-assigned this 2014-02-24 15:33:45 +01:00

This issue was referenced by blender/blender-addons-contrib@bf547a1983

This issue was referenced by blender/blender-addons-contrib@bf547a19837f112c4846c236427cd36bedf9ed6a

This issue was referenced by bf547a1983

This issue was referenced by bf547a19837f112c4846c236427cd36bedf9ed6a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bf547a1983.

Closed by commit bf547a1983.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38806
No description provided.