Fix T38806: Proxy file changes don't update until Blender's restart